Homework 10 работа над огибками

--- a/Homework 10/src/main/resources/templates/book-edit.html
+++ b/Homework 10/src/main/resources/templates/book-edit.html
@@ -48,7 +48,7 @@
                 <div class="form-row">
                     <div class="col-md-6 form-group">
                         <label>Book ID</label>
-                        <input class="form-control" th:field="*{id}" type="number">
+                        <input class="form-control" readonly="true" th:field="*{id}" type="number">
                     </div>
                     <div class="col-md-6 form-group">
                         <label>Title</label>
