--- a/Homework 10/src/main/resources/templates/comment-edit.html
+++ b/Homework 10/src/main/resources/templates/comment-edit.html
@@ -49,7 +49,7 @@
                 <div class="form-row">
                     <div class="col-md-6 form-group">
                         <label>Comment ID</label>
-                        <input class="form-control" th:field="*{id}" type="number">
+                        <input class="form-control" readonly="true" th:field="*{id}" type="number">
                     </div>
                     <div class="col-md-6 form-group">
                         <label>User</label>
