--- a/Homework 10b/src/main/resources/templates/comment-edit.html
+++ b/Homework 10b/src/main/resources/templates/comment-edit.html
@@ -44,26 +44,64 @@
     <div class="row">
         <div class="col-md-8 mx-auto">
             <h2>Edit comment:</h2>
-
-            <form method="post" th:action="@{'/save-comment/' + ${comment.bookId}}" th:object="${comment}">
                 <div class="form-row">
                     <div class="col-md-6 form-group">
                         <label>Comment ID</label>
-                        <input class="form-control" readonly="true" th:field="*{id}" type="number">
+                        <input class="form-control" id="id" readonly="true" type="number">
                     </div>
                     <div class="col-md-6 form-group">
                         <label>User</label>
-                        <input class="form-control" th:field="*{userName}" type="text">
+                        <input class="form-control" id="userName" type="text">
                     </div>
                     <div class="col-md-6 form-group">
                         <label>Text</label>
-                        <input class="form-control" th:field="*{text}" type="text">
+                        <input class="form-control" id="text" type="text">
+                    </div>
+                    <div class="col-md-6 form-group">
+                        <input id="bookId" type="hidden">
                     </div>
                 </div>
-                <button class="btn-primary" type="submit">Save Comment</button>
-            </form>
+            <button class="btn-primary" onclick="onSubmit()">Save Comment</button>
         </div>
     </div>
 </div>
 </body>
+<script>
+    var comment_id = [[${commentId}]];
+    var book_id = [[${bookId}]]
+    if (comment_id != -1) {
+        $(function () {
+            $.get('/api/comments/' + comment_id).done(function (comment) {
+                    $("#id").val(comment_id);
+                    $("#userName").val(comment.userName);
+                    $("#text").val(comment.text);
+                    $("#bookId").val(comment.bookId);
+                }
+            );
+
+        });
+    } else {
+        $("#id").val(comment_id);
+        $("#bookId").val(book_id);
+    }
+
+</script>
+<script>
+    function onSubmit() {
+        var data_json = JSON.stringify({
+            "id": $("#id").val(),
+            "userName": $("#userName").val(),
+            "text": $("#text").val(),
+            "bookId": $("#bookId").val()
+
+        });
+
+        $.post({
+            url: '/api/comments/',
+            data: data_json,
+            contentType: 'application/json; charset=utf-8'
+        });
+        window.location.href = "/";
+    }
+</script>
 </html>
