Homework 10 работа над ошибками

--- a/Homework 10b/src/main/resources/templates/book-edit.html
+++ b/Homework 10b/src/main/resources/templates/book-edit.html
@@ -118,8 +118,9 @@
             url: '/api/books/',
             data: data_json,
             contentType: 'application/json; charset=utf-8'
+        }).done(function (data) {
+            window.location.href = "/";
         });
-        window.location.href = "/";
     }
 </script>
 </body>
