--- a/Homework 13/src/main/resources/templates/comment-edit.html
+++ b/Homework 13/src/main/resources/templates/comment-edit.html
@@ -84,7 +84,7 @@
 <script>
     function onSubmit() {
         var data_json = JSON.stringify({
-            "id": $("#id").val(),
+            "id": $("#comment_id").val(),
             "text": $("#text").val(),
             "bookId": $("#bookId").val()
 
