--- a/Homework 13/src/main/resources/templates/comments.html
+++ b/Homework 13/src/main/resources/templates/comments.html
@@ -78,7 +78,7 @@
                 $('tbody').append(`
                     <tr>
                         <td>${comment.id}</td>
-                        <td>${comment.userName}</td>
+                        <td>${comment.userName.firstname + " " + comment.userName.lasttname}</td>
                         <td>${comment.commentDateTime}</td>
                         <td>${comment.text}</td>
                         <td>
